--- a/app_server/views/generic-text.jade
+++ b/app_server/views/generic-text.jade
@@ -9,6 +9,8 @@ block content
      .col-md-6.col-sm-12
        p.lead Loc8r was created to help people find places to sit down and get a bit of work done.
          |<br /><br />
-         |So Alors!!!
+         |So Alors write here something more!!!
+
+
     
          footer
