extract data from views

--- a/app_server/views/generic-text.jade
+++ b/app_server/views/generic-text.jade
@@ -7,9 +7,7 @@ block content
          h1= title
    .row
      .col-md-6.col-sm-12
-       p.lead Loc8r was created to help people find places to sit down and get a bit of work done.
-         |<br /><br />
-         |So Alors write here something more!!!
+       p.lead= abouttext
 
 
     
