--- a/app_server/views/locations-list.jade
+++ b/app_server/views/locations-list.jade
@@ -14,7 +14,7 @@ block content
            h4
              a(href="/location")= location.name
              small &nbsp;
-               +outputRating(location.rating)
+               +outputRating(location[rating])
              span.badge.pull-right.badge-default= location.distance
            p.address= location.address
            p
@@ -23,6 +23,5 @@ block content
                 &nbsp;
 
      .col-xs-12.col-sm-4
-       p.lead Looking for wifi and a seat? Loc8r helps you find places to work when out and about. Perhaps with coffee, cake or a pint? Let Loc8r help you find the place you're looking for.
-    
+       p.lead= sidebar
          footer
