--- a/app_server/views/locations-info.jade
+++ b/app_server/views/locations-info.jade
@@ -1,44 +1,35 @@
 extends layout
+include _includes/sharedHTMLfunctions
 
 extends layout
 block content
   .row.page-header
     .col-lg-12
-      h1 Starcups
+      h1= headername
   .row
     .col-xs-12.col-md-9
       .row
         .col-xs-12.col-sm-6
           p.rating
-            span.glyphicon.glyphicon-star
-            span.glyphicon.glyphicon-star
-            span.glyphicon.glyphicon-star
-            span.glyphicon.glyphicon-star-empty
-            span.glyphicon.glyphicon-star-empty
-          p 125 High Street, Reading, RG6 1PS
+            +outputRating(location.rating)
+          p= location.address
           .panel.panel-primary
             .panel-heading
-              h2.panel-title Opening hours
+              h2.panel-title=  openHouresHeader
             .panel-body
-              p Monday - Friday : 7:00am - 7:00pm
-              p Saturday : 8:00am - 5:00pm
-              p Sunday : closed
+               each houres in openHoures
+                p= houres
+
           .panel.panel-primary
             .panel-heading
-              h2.panel-title Facilities
+              h2.panel-title= facilities
             .panel-body
-              span.label.label-warning
-                span.glyphicon.glyphicon-ok
-                | &nbsp;Hot drinks
-              | &nbsp;
-              span.label.label-warning
-                span.glyphicon.glyphicon-ok
-                | &nbsp;Food
-              | &nbsp;
-              span.label.label-warning
-                span.glyphicon.glyphicon-ok
-                | &nbsp;Premium wifi
-              | &nbsp;
+              each facility in facilities
+                | &nbsp;
+                span.label.label-warning
+                  span.glyphicon.glyphicon-ok= facility
+                  | &nbsp;
+
         .col-xs-12.col-sm-6.location-map
           .panel.panel-primary
             .panel-heading
