--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -27,5 +27,7 @@ html
           .col-xs-12
             small &copy; Loc8r
 
-    script(src='/javascripts/jquery.min.js')
+    script(src='/javascripts/jquery-2.2.4.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
+
+    
