--- a/app_server/views/locations-info.jade
+++ b/app_server/views/locations-info.jade
@@ -5,7 +5,7 @@ extends layout
 block content
   .row.page-header
     .col-lg-12
-      h1= headername
+      h1= pageHeader.title
   .row
     .col-xs-12.col-md-9
       .row
@@ -17,14 +17,16 @@ block content
             .panel-heading
               h2.panel-title=  openHouresHeader
             .panel-body
-               each houres in openHoures
-                p= houres
-
+               each houres in location.openingTimes
+                if !houres.closed
+                    p= houres.days +':' + houres.opening +'-' +houres.closing
+                else 
+                    p= houres.days +':'+ 'closed'
           .panel.panel-primary
             .panel-heading
-              h2.panel-title= facilities
+              h2.panel-title= facilitiesHeader
             .panel-body
-              each facility in facilities
+              each facility in location.facilities
                 | &nbsp;
                 span.label.label-warning
                   span.glyphicon.glyphicon-ok= facility
@@ -35,40 +37,26 @@ block content
             .panel-heading
                h2.panel-title Location map
             .panel-body
-               img.img-responsive.img-rounded(src='http://maps.googleapis.com/maps/api/staticmap?center=51.455041,-0.9690884&zoom=17&size=400x350&sensor=false&markers=51.455041,-0.9690884&scale=2')
+               img.img-responsive.img-rounded(src='http://maps.googleapis.com/maps/api/staticmap?center=51.455041,-0.9690884&zoom=17&size=400x350&sensor=false&markers=51.455041,-0.9690884&scale=1')
+    .col-xs-12.col-md-3
+     p.lead= pageHeader.title +sidebar.context
+     p= sidebar.callToAction
   .row
     .col-xs-12
       .panel.panel-primary.review-panel
         .panel-heading
-          a.btn.btn-default.pull-right(href='/location/review/new') Add review
+          a.btn.btn-default.pull-right(href='/location/#{location._id}/reviews/new') Add review
           h2.panel-title Customer reviews
         .panel-body.review-container
-          .row
-            .review
-              .well.well-sm.review-header
-                span.rating
-                  span.glyphicon.glyphicon-star
-                  span.glyphicon.glyphicon-star
-                  span.glyphicon.glyphicon-star
-                  span.glyphicon.glyphicon-star
-                  span.glyphicon.glyphicon-star
-                span.reviewAuthor Simon Holmes
-                small.reviewTimestamp 16 July 2013
-              .col-xs-12
-                   p What a great place. I can't say enough good things about it.
+          each review in location.reviews
            .row
-              .review
-                .well.well-sm.review-header
-                   span.rating
-                    span.glyphicon.glyphicon-star
-                    span.glyphicon.glyphicon-star
-                    span.glyphicon.glyphicon-star
-                    span.glyphicon.glyphicon-star-empty
-                    span.glyphicon.glyphicon-star-empty
-                   span.reviewAuthor Charlie Chaplin
-                   small.reviewTimestamp 16 June 2013
-                .col-xs-12
-                  p It was okay. Coffee wasn't great, but the wifi was fast.
-    .col-xs-12.col-md-3
-      p.lead Simon's cafe is on Loc8r because it has accessible wifi and space to sit down with your laptop and get some work done.
-      p If you've been and you like it - or if you don't - please leave a review to help other people just like you.
+             .review
+               .well.well-sm.review-header
+                 span.rating
+                      +outputRating(review.rating)
+                  span.reviewAuthor= review.author
+                   small.reviewTimestamp
+                     +formatDate(review.createdOn)
+               .col-xs-12
+                    p= review.reviewText
+           
