--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -19,15 +19,19 @@ html(ng-app='loc8rApp')
           li
             a(href='/about/') About
     
-    .container              
-      block content
+    .container  
+      div(ng-view)            
+        block content
     
       footer
         .row
           .col-xs-12
             small &copy; Loc8r
     script(src='/angular/angular.min.js')
-    script(src='/angular/loc8rApp.js')        
+    script(src='/lib/angular-route.js')
+    script(src='/app.js')
+    #script(src='/angular/loc8rApp.js')  
+    script(src='/home/home.controller.js')      
     script(src='/javascripts/jquery-2.2.4.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
     script(src='/javascripts/validation.js')
