--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -29,9 +29,14 @@ html(ng-app='loc8rApp')
             small &copy; Loc8r
     script(src='/angular/angular.min.js')
     script(src='/lib/angular-route.js')
-    script(src='/app.js')
+    script(src='/angular/loc8r.min.js')
+    #script(src='/app.js')
     #script(src='/angular/loc8rApp.js')  
-    script(src='/home/home.controller.js')      
+    #script(src='/home/home.controller.js')
+    #script(src='/common/services/loc8rData.service.js')
+    #script(src='/common/services/geolocation.service.js')
+    #script(src='/common/filters/formatDistance.filter.js')
+    #script(src='/common/directives/ratingStars/ratingStars.directive.js')
     script(src='/javascripts/jquery-2.2.4.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
     script(src='/javascripts/validation.js')
